# enhyp_main

./: .env  .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: actions.yml  django.yml
nginx/: nginx.conf
src/: Makefile  db.sqlite3  package-lock.json
src/apps/crm/: models.py  urls.py  views.py
src/apps/geology/: apps.py
src/apps/organizations/: forms.py  models.py  org_confirmation.py  test.py  urls.py  views.py
src/apps/users/: confirmation.py  forms.py  manager.py  models.py  urls.py  views.py
src/apps/well_passport/: apps.py  forms.py  models.py  urls.py  views.py
src/apps/well_section/: apps.py  forms.py  models.py  urls.py  views.py
src/apps/well_section_counter/: main.py
src/apps/zso/: apps.py  call_counter.py  forms.py  models.py  tests.py  urls.py  views.py
src/config/: settings.py  urls.py  views.py
src/form/: .gitignore  package-lock.json  package.json  webpack.config.js
src/form/src/: App.vue
src/static/assets/: index-3ef5c228.css  index-9eb2f77f.js
src/static/map_1/: main.js  points_2.geojson
src/static/map_2/: VZU.js  controls.js  fields.js  layers.js  main.js  main_2.js  ol-layerswitcher.css  (+1 more)
src/templates/: base.html  example.html  index.html  map.html  map_1.html  map_2.html  regime.html  test_mail.html
src/well_section_counter/: geophys copy.py  geophys.py  handler.py  inclusion.py  index_colours.py  main.py  main_counter.py  new_data.json  possible_settings.txt  specks.py
src/zso_counter/: app.py  main_counter.py  main_dataset.csv  map.py  start_parameters.py
(+114 files in other folders)
