[tool.poetry]
name = "maindir"
version = "0.1.0"
description = ""
authors = ["SizNi <wwwwwwwww@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.3"
black = "^23.3.0"
python-dotenv = "^1.0.0"
i18n = "^0.2"
django-bootstrap4 = "^23.2"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
